force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Interviewed</fullName>
            </value>
            <value>
                <fullName>Offer Approval</fullName>
            </value>
            <value>
                <fullName>Offer Sent</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Document Verification</fullName>
            </value>
            <value>
                <fullName>Documents Verified</fullName>
            </value>
            <value>
                <fullName>Documents Rejected</fullName>
            </value>
            <value>
                <fullName>Joining Letter Sent</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>