force-app/main/default/objects/Application__c/validationRules/Documents_must_be_verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Documents_must_be_verified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;Joining Letter Sent&quot;),
    NOT(Documents_Verified__c)
)</errorConditionFormula>
    <errorMessage>Documents must be verified before the Application can move to Joining Letter Sent.</errorMessage>
</ValidationRule>