force-app/main/default/objects/Application__c/validationRules/Offer_Approval_Requires_Hire.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Approval_Requires_Hire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;Offer Approval&quot;),
    NOT(ISPICKVAL(Interview_Recommendation__c, &quot;Hire&quot;))
)</errorConditionFormula>
    <errorMessage>Application cannot move to Offer Approval until the interview recommendation is Hire.</errorMessage>
</ValidationRule>